[package]
name = "python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "cribrum"
crate-type = ["cdylib"]

[dependencies]
cribrum = { path = "../../"}
pyo3 = { version = "0.16.4", features = ["extension-module"] }
